gcc/testsuite/rust/rustc/ui/parser/issues/issue-62895_dg.rs
fn main() {}

fn v() -> isize {
mod _ {
pub fn g() -> isizee {
mod _ {
pub    g() -> is
(), w20); // { dg-error "" "" { target *-*-* } }
}
(), w20); // { dg-error "" "" { target *-*-* } }
}

